added styling and basic divs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Password Stuff</title>
   </head>
   <body>
+    <div id="titleContainer"><h1>Password Stuff</h1></div>
+
+    <div id="progressBarContainer">
+      <progress id="progressBar" value="32" max="100"></progress>
+    </div>
+
+    <div id="inputContainer">
+      <input type="text" autofocus aria-labelledby="password" />
+    </div>
+
+    <div id="recomendationContainer"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
