--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
     <div id="titleContainer"><h1>Password Stuff</h1></div>
 
     <div id="progressBarContainer">
-      <progress id="progressBar" value="32" max="100"></progress>
+      <progress id="progressBar" max="100"></progress>
     </div>
 
     <div id="inputContainer">
-      <input type="text" autofocus aria-labelledby="password" />
+      <input
+        id="passwordInput"
+        type="text"
+        autofocus
+        aria-labelledby="password"
+      />
     </div>
 
     <div id="recomendationContainer"></div>
