added all different functions

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
       />
     </div>
 
-    <div id="recomendationContainer"></div>
+    <div id="recomendationContainer">
+      <div id="lowercaseContainer"></div>
+      <div id="uppercaseContainer"></div>
+      <div id="numberContainer"></div>
+      <div id="symbolContainer"></div>
+    </div>
 
     <script src="script.js"></script>
   </body>
