updated the strictness of the passwordcriteria and created generator files

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   </head>
   <body>
     <div id="titleContainer"><h1>Password Stuff</h1></div>
+    <div id="navBar">
+      <ul>
+        <li><a href="/index.html">Password Checker</a></li>
+        <li>
+          <a href="/passwordGenerator/passwordGenerator.html"
+            >Password Generator</a
+          >
+        </li>
+      </ul>
+    </div>
 
     <div id="progressBarContainer">
       <progress id="progressBar" max="100"></progress>
