added the form content

--- a/passwordGenerator/passwordGenerator.html
+++ b/passwordGenerator/passwordGenerator.html
@@ -18,6 +18,53 @@
         </li>
       </ul>
     </div>
+    <div>
+      <form>
+        <div>
+          <label for=""
+            >Number of Characters:
+            <input
+              type="range"
+              min="1"
+              max="50"
+              value="10"
+              id="numberOfCharactersSlider"
+          /></label>
+          <input
+            type="number"
+            min="1"
+            max="50"
+            value="10"
+            id="numberOfCharactersNumberRepresentation"
+          />
+        </div>
+        <div>
+          <label for="includeUppercase"
+            >Uppercase<input
+              type="checkbox"
+              name="includeUppercase"
+              id="includeUppercase"
+          /></label>
+        </div>
+      </form>
+      <div>
+        <label for="includeNumbers"
+          >Numbers<input
+            type="checkbox"
+            name="includeNumbers"
+            id="includeNumbers"
+        /></label>
+      </div>
+      <div>
+        <label for="includeSymbols"
+          >Symbols<input
+            type="checkbox"
+            name="includeSymbols"
+            id="includeSymbols"
+        /></label>
+      </div>
+    </div>
+    <div><button type="submit">Submit</button></div>
     <script src="passwordGenerator.js"></script>
   </body>
 </html>
