captured values from the form

--- a/passwordGenerator/passwordGenerator.html
+++ b/passwordGenerator/passwordGenerator.html
@@ -64,7 +64,7 @@
         /></label>
       </div>
     </div>
-    <div><button type="submit">Submit</button></div>
+    <div><button type="submit" id="generateSubmitButton">Submit</button></div>
     <script src="passwordGenerator.js"></script>
   </body>
 </html>
