added a number value for character input

--- a/passwordGenerator/passwordGenerator.html
+++ b/passwordGenerator/passwordGenerator.html
@@ -18,18 +18,24 @@
         </li>
       </ul>
     </div>
-    <div>
+
+    <div id="generatedPasswordContainer">
+      <h4 id="generatedPassword">Password</h4>
+    </div>
+
+    <div id="formContainer">
       <form>
         <div>
-          <label for=""
-            >Number of Characters:
-            <input
-              type="range"
-              min="1"
-              max="50"
-              value="10"
-              id="numberOfCharactersSlider"
-          /></label>
+          <label for="" id="characterAmountLabel"
+            >Number of Characters: 10</label
+          >
+          <input
+            type="range"
+            min="1"
+            max="50"
+            value="10"
+            id="numberOfCharactersSlider"
+          />
         </div>
         <div>
           <label for="includeUppercase"
@@ -39,25 +45,29 @@
               id="includeUppercase"
           /></label>
         </div>
+
+        <div>
+          <label for="includeNumbers"
+            >Numbers<input
+              type="checkbox"
+              name="includeNumbers"
+              id="includeNumbers"
+          /></label>
+        </div>
+        <div>
+          <label for="includeSymbols"
+            >Symbols<input
+              type="checkbox"
+              name="includeSymbols"
+              id="includeSymbols"
+          /></label>
+        </div>
+
+        <div>
+          <button type="submit" id="generateSubmitButton">Submit</button>
+        </div>
       </form>
-      <div>
-        <label for="includeNumbers"
-          >Numbers<input
-            type="checkbox"
-            name="includeNumbers"
-            id="includeNumbers"
-        /></label>
-      </div>
-      <div>
-        <label for="includeSymbols"
-          >Symbols<input
-            type="checkbox"
-            name="includeSymbols"
-            id="includeSymbols"
-        /></label>
-      </div>
     </div>
-    <div><button type="submit" id="generateSubmitButton">Submit</button></div>
     <script src="passwordGenerator.js"></script>
   </body>
 </html>
